Fix the scrollbar/chat box problem
Used the scrollbar-gutter fix in dashboardPage.css, combined with changing position to sticky and width to 100% in .newForm and form respectively. #4

--- a/client/src/components/newPrompt/newPrompt.css
+++ b/client/src/components/newPrompt/newPrompt.css
@@ -2,8 +2,8 @@
     padding-bottom: 100px;
   }
     .newForm{
-      width: 50%;
-      position: absolute;
+      width: 100%;
+      position: sticky;
       bottom: 0;
       background-color: #2c2937;
       border-radius: 20px;
