--- a/client/src/routes/chatPage/chatPage.css
+++ b/client/src/routes/chatPage/chatPage.css
@@ -5,9 +5,13 @@
   align-items: center;
   position: relative;
 
+  /* overflow: auto; */
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+
   .wrapper {
     flex: 1;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     width: 100%;
     display: flex;
     justify-content: center;
