--- a/client/src/routes/dashboardPage/dashboardPage.css
+++ b/client/src/routes/dashboardPage/dashboardPage.css
@@ -7,8 +7,8 @@
   /* from .chatPage in chatPage.css */
   position: relative;
 
-  /* overflow: auto; */
-  /* scrollbar-gutter: stable; */
+  overflow: auto;
+  scrollbar-gutter: stable;
 
   .texts {
     flex: 1;
@@ -91,8 +91,8 @@
       margin-bottom: 10px; */
 
       /* from .newForm in newPrompt.css */
-      width: 50%;
-      position: absolute;
+      width: 100%;
+      position: sticky;
       bottom: 0;
       background-color: #2c2937;
       border-radius: 20px;
